<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word Scramble!</string>
    <string name="action_settings">Settings</string>
    <string name="text_hint_ready">Your turn to play!</string>
    <string name="text_hint_not_ready">It\'s your opponent\'s turn!</string>
    <string name="edit_message_hint">Enter word here</string>
    <string name="button_pass">Pass</string>
    <string name="button_play">Play</string>
    <string name="player1">Player 1:</string>
    <string name="player2">Player 2:</string>
    
    <string name="login_button">login</string>
    <string name="login_edit_message">username</string>
    
    <string name="join_table_button">Join table</string>
    <string name="host_table_button">Host table</string>
    
    <string name="wait_msg">Waiting for available table!</string>
    
    <string name="no_connection">No connection available. Please try again later.</string>
    <string name="invalid_login">Invalid username. Please enter a valid username.</string>
    <string name="ok_dialog">OK</string>
    
    <string name="no_table_available_message">No tables are available. What would you like to do?</string>
    <string name="host_table_option">Host table</string>
    <string name="try_again_option">Try again</string>
    <string name="cancel_option">Cancel</string>
    
    <string name="leave_game">Leave game</string>
    <string name="quit">Quit</string>
    <string name="help">Help</string>

</resources>